@@ -10,6 +10,8 @@ Change log for zeit.web
 
 - ZON-2114: Add cp_extra place 13 for manual addition
 
+- FIX: Make redirect of cp2015->without configurable, so preview doesn't break
+
 
 1.66 (2015-09-10)
 -----------------
